# ironsides_cam_throttle

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
include/ironsides_reduce/: ironsides_reduce.h
launch/: ironsides_reduce_standalone_nodelet.launch
src/: ironsides_reduce.cpp
src/nodelets/: ironsides_reduce_nodelet.cpp
src/nodes/: ironsides_reduce_node.cpp
